--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "typescript.tsdk": "node_modules/typescript/lib",
     "eslint.enable": true,
-    "files.eol": "\n"
+    "files.eol": "\n",
+    "editor.tabSize": 2
 }
